# a2a-agent1

./: .gitignore  README.md  apprunner.yaml  pyproject.toml
app/: __main__.py  a2a_agent_executor.py  exchange_rates.py  langgraph_agent.py  tools.py  tracer.py
orchestrate/: orchestrate_agent.yaml
tests/: a2a_client.py  watsonx_client.py
